--- a/index.html
+++ b/index.html
@@ -6,7 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing page</title>
 </head>
-<body>
-    <h1>Hello World!</h1>
-</body>
+    <body>
+        <div class="header">
+        <h1>TJ Micale</h1>
+        <ul class="links">
+            <li><a href="https://github.com/Macnteej">GitHub</a></li>
+            <li><a href="www.linkedin.com/in/tj-micale">Linked In</a></li>
+            <li><a href="https://docs.google.com/document/d/18Pw0VEYdqe471-mslw_qf8dtkCWPSrLZRlRHaHbYfO4/edit?usp=sharing">Resume</a></li>
+        </ul>
+    </div>
+
+        <div class="about me">
+            <p>I am a self taught web developer with knowledge of HTML, CSS, and JavaScript</p>
+<img src="landing_page_photo.jpeg" alt="photo of me" style="height: auto; width: 300px;"> 
+            <!--add professional photo here-->
+        </div>
+        <div class="projects">
+            <h1>Projects</h1>
+            <ul class="works">
+<!--add the projects here when completed--> 
+            </ul>
+        </div>
+        
+    </body>
 </html>
