modified header and about me section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Landing page</title>
 </head>
     <body>
@@ -15,18 +16,20 @@
             <li><a href="https://docs.google.com/document/d/18Pw0VEYdqe471-mslw_qf8dtkCWPSrLZRlRHaHbYfO4/edit?usp=sharing">Resume</a></li>
         </ul>
     </div>
-
-        <div class="about me">
+    <div class="linebreak"></div>
+        <div class="info">
+            My Portfolio
             <p>I am a self taught web developer with knowledge of HTML, CSS, and JavaScript</p>
-<img src="landing_page_photo.jpeg" alt="photo of me" style="height: auto; width: 300px;"> 
+<div class="img"><img src="landing_page_photo.jpeg" alt="photo of me" style="height: auto; width: 300px;"></div>
             <!--add professional photo here-->
         </div>
         <div class="projects">
             <h1>Projects</h1>
             <ul class="works">
+                <li><a href="https://macnteej.github.io/TJ-recipes-practice/">Recipes Page</a></li>
 <!--add the projects here when completed--> 
             </ul>
         </div>
-        
+       
     </body>
 </html>
