--- a/index.html
+++ b/index.html
@@ -8,28 +8,61 @@
     <title>Landing page</title>
 </head>
     <body>
-        <div class="header">
-        <h1>TJ Micale</h1>
-        <ul class="links">
-            <li><a href="https://github.com/Macnteej">GitHub</a></li>
-            <li><a href="www.linkedin.com/in/tj-micale">Linked In</a></li>
-            <li><a href="https://docs.google.com/document/d/18Pw0VEYdqe471-mslw_qf8dtkCWPSrLZRlRHaHbYfO4/edit?usp=sharing">Resume</a></li>
-        </ul>
-    </div>
-    <div class="linebreak"></div>
-        <div class="info">
-            My Portfolio
-            <p>I am a self taught web developer with knowledge of HTML, CSS, and JavaScript</p>
-<div class="img"><img src="landing_page_photo.jpeg" alt="photo of me" style="height: auto; width: 300px;"></div>
-            <!--add professional photo here-->
+        <header>
+            <div class="navigation">
+                <div class="left">
+                    <p id="logo">TJ Micale</p>
+                </div>
+                <div class="right">
+                    <ul>
+                        <li>Github</li>
+                        <li>Linked In</li>
+                        <li>resume</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="welcome">
+                <div class="left">
+                    <h1 id="hero">My Portfolio</h1>
+                    <p class="aboutme">I am a self taught programmer who has knowledge on HTML, CSS, and JavaScript</p>
+                    <button class="email">Email me</button>
+                <div class="right">
+                    <div class="image"><p>image place holder</p></div>
+                </div>
+                </div>
+            </div>
+        </header>
+        <main>
+            <h2>projects</h2>
+            <div class="card-container secondary"></div>
+                <div class="card">
+                    <div class="square"></div>
+                    <p>Recipe list</p>
+                </div>
+
+                <div class="card">
+                    <div class="square"></div>
+                    <p>next project</p>
+                </div>
+
+                <div class="card">
+                    <div class="square"></div>
+                    <p>next project</p>
+                </div>
+
+                <div class="card">
+                    <div class="square"></div>
+                    <p>next project</p>
+                </div>
+            </div>
+        </main>
+
+        <div class="quote">
+            <em>insert inspirational quote here</em>
+            <p>- Me</p>
         </div>
-        <div class="projects">
-            <h1>Projects</h1>
-            <ul class="works">
-                <li><a href="https://macnteej.github.io/TJ-recipes-practice/">Recipes Page</a></li>
-<!--add the projects here when completed--> 
-            </ul>
-        </div>
-       
+
+        
     </body>
 </html>
