--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Landing page</title>
 </head>
+
     <body>
         <header>
             <div class="navigation">
@@ -15,27 +16,28 @@
                 </div>
                 <div class="right">
                     <ul>
-                        <li>Github</li>
-                        <li>Linked In</li>
-                        <li>resume</li>
+                        <li><a href="#">Github</a></li>
+                        <li><a href="#">Linked In</a></li>
+                        <li><a href="#">Resume</a></li>
                     </ul>
                 </div>
             </div>
 
             <div class="welcome">
                 <div class="left">
-                    <h1 id="hero">My Portfolio</h1>
+                    <h1 class="hero">My Portfolio</h1>
                     <p class="aboutme">I am a self taught programmer who has knowledge on HTML, CSS, and JavaScript</p>
-                    <button class="email">Email me</button>
+                    <button class="aboutme">Email me</button>
                 <div class="right">
-                    <div class="image"><p>image place holder</p></div>
+                    <div class="image">
+                        <p class="aboutme">image place holder</p></div>
                 </div>
                 </div>
             </div>
         </header>
         <main>
             <h2>projects</h2>
-            <div class="card-container secondary"></div>
+            <div class="card-container-secondary"></div>
                 <div class="card">
                     <div class="square"></div>
                     <p>Recipe list</p>
@@ -63,6 +65,18 @@
             <p>- Me</p>
         </div>
 
-        
+        <div class="reach">
+            <div class="container">
+                <div class="left">
+                    <strong>Reach out here!</strong>
+                    <p class="secondary">Feel free to email me in regards to anything you have found or would like to speak further about.</p>
+                </div>
+                <div class="right">
+                    <button class="secondary">Email me</button>
+                </div>
+            </div>
+        </div>
+
+        <footer>TMicale 2022</footer>   
     </body>
 </html>
