--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 										</div>
 										<div class="field">
 											<label for="message">Location</label>
-											<p>Canton, Ga</p>
+											<p>Lexington, VA</p>
 										</div>
 									</div>
 								</form>
@@ -359,3 +359,4 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
